fix: Update nav banner style (#1022)
Vertically aligns the nav banner components and sets the height to be constant.  Long messages will also vertically scroll rather than overflowing.  Also adjusts the remaining vertical space on the page to account for whether a nav banner exists.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,7 @@ $weight-normal: 400;
 $weight-bold: 600;
 
 $app-header-height: 55px;
+$nav-banner-height: 42px;
 
 @mixin transition($prop, $duration, $delay: 0ms, $easing: ease) {
   -webkit-transition: $prop $duration $delay $easing;
